sort.pancake.BasicPancake.scala.error
Compilation error:
BasicPancake:13: error: value IndexOf is not a member of Array[Int]
  return crepes.IndexOf(crepes.max)
                ^BasicPancake:21: error: not found: value plusGrosse
    plusGrosse = getMax(getTaillePile()-n)
    ^BasicPancake:22: error: not found: value plusGrosse
    retourne(plusGrosse+1)
             ^